k8s/sqlserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-sqlserver
  template:
    metadata:
      labels:
        app: kanban-sqlserver
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: kanban-sqlserver-storage
              mountPath: /var/opt/mssql
      volumes:
        - name: kanban-sqlserver-storage
          persistentVolumeClaim:
            claimName: kanban-sqlserver-pvc
