k8s/kanban-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-api
spec:
  selector:
    app: kanban-api
  ports:
    - port: 8080
      targetPort: 8080
