k8s/kanban-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-frontend
spec:
  selector:
    app: kanban-frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort #Development only — use ClusterIP with Ingress in production
