k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-sqlserver
spec:
  selector:
    app: kanban-sqlserver
  ports:
    - port: 1433
      targetPort: 1433
